// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldSelector > should render successfully with no preselected fields 1`] = `
<div>
  <div
    class="css-1w2p18d"
  >
    <h3
      class="css-m3i12g"
      data-test-id="cf-ui-subheading"
    >
      CT1
    </h3>
    <form
      data-test-id="cf-ui-form-label"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="field-box-ct1-x"
        >
          <input
            aria-checked="false"
            aria-describedby="field-box-ct1-x-helptext"
            class="css-199qhtr"
            id="field-box-ct1-x"
            name="X"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="field-box-ct1-x-helptext"
        >
          Field ID: x
        </p>
      </div>
    </form>
  </div>
  <div
    class="css-1w2p18d"
  >
    <h3
      class="css-m3i12g"
      data-test-id="cf-ui-subheading"
    >
      CT2
    </h3>
    <form
      data-test-id="cf-ui-form-label"
    />
  </div>
</div>
`;

exports[`FieldSelector > should render successfully with preselected fields 1`] = `
<div>
  <div
    class="css-1w2p18d"
  >
    <h3
      class="css-m3i12g"
      data-test-id="cf-ui-subheading"
    >
      CT1
    </h3>
    <form
      data-test-id="cf-ui-form-label"
    >
      <div
        class="css-1lxwves"
      >
        <label
          class="css-1k16bbs"
          data-test-id="cf-ui-checkbox"
          for="field-box-ct1-x"
        >
          <input
            aria-checked="true"
            aria-describedby="field-box-ct1-x-helptext"
            class="css-199qhtr"
            id="field-box-ct1-x"
            name="X"
            role="checkbox"
            type="checkbox"
            value=""
          />
          <span
            class="css-ely5ts"
          >
            <svg
              aria-hidden="true"
              class="css-1xugees"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
              />
            </svg>
          </span>
        </label>
        <p
          class="css-1fd6osb"
          data-test-id="cf-ui-help-text"
          id="field-box-ct1-x-helptext"
        >
          Field ID: x
        </p>
      </div>
    </form>
  </div>
  <div
    class="css-1w2p18d"
  >
    <h3
      class="css-m3i12g"
      data-test-id="cf-ui-subheading"
    >
      CT2
    </h3>
    <form
      data-test-id="cf-ui-form-label"
    />
  </div>
</div>
`;
